bread crumbs ekledim

--- a/index2.html
+++ b/index2.html
@@ -40,6 +40,21 @@
         </div>
       </nav>
 
+      <div class="container-fluid" style="background-color: rgb(230, 252, 255); padding-top: 8px;">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-9">
+                </div>
+                <div class="col-md-3">
+                    <nav aria-label="breadcrumb">
+                        <ol class="breadcrumb">
+                          <li class="breadcrumb-item active" aria-current="page">Ana Sayfa</li>
+                        </ol>
+                      </nav>
+                </div>
+            </div>
+        </div>
+      </div>
 
 
       
