bilgilendirme kısmı ekledim

--- a/index2.html
+++ b/index2.html
@@ -126,6 +126,39 @@
         </div>
       </div>
 
+      <div class="container-fluid" style="background-image: url(https://www.mercedes-benz.com.tr/passengercars/mercedes-benz-cars/models/e-class/saloon/design/exterior-design/_jcr_content/mediabox/elements/mediaboxelement/asset.MQ6.0.20200928154030.jpeg); background-repeat: no-repeat; background-size: 100%; min-height: 100%; padding: 100px;">
+        <div class="container rounded" style="background-color: seashell; opacity: 75%; padding-top: 20px;">
+          <div class="row">
+              <div class="col-md">
+                  <h5>SAKARYA’DA OTO KİRALAMA</h5>
+                  <p>
+                      Sakarya Araç Kiralama; kalitenin, varılması gereken bir hedeften çok, 
+                      gelişme ve süreklilik göstermesi gereken bir süreç olduğuna inanmaktadır. 
+                      Bu düşünce çerçevesinde; müşteri memnuniyetini ana hedef olarak benimseyen şirketimiz, 
+                      aşağıdaki ilkeler doğrultusunda kalite politikasını oluşturmuştur.
+                  </p>
+              </div>
+              <div class="col-md">
+                  <h5>ADAPAZARI’NDA ARAÇ KİRALAMA</h5>
+                  <p>
+                      Sakarya Adapazarı'nda araç kiralama işlemlerinizde kafanız rahat bir şekilde hizmet almak 
+                      istiyorsanız sizleri merkezimize bekliyoruz. İhtiyaçlarınız doğrultusunda sizin için en uygun 
+                      marka ve model araçlarımız çeşitli ekonomik imkan ve kolaylıklar ile hizmetinizde.
+                  </p>
+              </div>
+              <div class="col-md">
+                  <h5>SAKARYA’DA 2. EL ARAÇ ALIM SATIM</h5>
+                  <p>
+                      Eğer ikinci el araç almayı düşünüyor ya da ikinci el aracınızı satmayı 
+                      düşünüyorsanız bizlere ulaşabilirsiniz. Sakarya'da hizmet veren Yağmur Araç 
+                      Kiralama firmamız ile kiralama, oto yıkama, otopark ve ikinci el alım - satım 
+                      işlemlerinden faydalanabilirsiniz.
+                  </p>
+              </div>
+          </div>
+        </div>
+    </div>
+
 
       
 
