--- a/index2.html
+++ b/index2.html
@@ -159,6 +159,25 @@
         </div>
     </div>
 
+    <div class="container-fluid" style="background-color: rgb(230, 252, 255);">
+      <div class="container" style="padding: 30px;">
+        <div class="row">
+            <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1s9J8-iNmelb1iac2Z135c5siXUgKa6eH&ehbc=2E312F" width="640" height="480" ></iframe>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fluid" style="background-color: lightslategray;">
+      <div class="container" style="padding-top: 5px;">
+          <div class="row">
+              <div class="col-md-4">
+                  <p><b>YAĞMUR RENT A CAR</b> | Tüm Hakları Saklıdır © 2021<br></p> 
+              </div>
+              <div class="col-md-8"></div>
+          </div>
+      </div>
+    </div>
+
 
       
 
